--- a/skin.html
+++ b/skin.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>[##_page_title_##] — [##_title_##]</title>
+    <link rel="alternate" type="application/rss+xml" title="[##_title_##]" href="[##_rss_url_##]">
+    <link rel="stylesheet" :href='"//fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"'>
+    <link rel="stylesheet" :href='"//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"'>
 </head>
-<body>
-    
+<body id="[##_body_id_##]">
+    <s_t3>
+        <main id="main">
+            <s_cover_group>
+                <s_cover_rep>
+                    
+                </s_cover_rep>
+            </s_cover_group>
+        </main>
+        <aside id="sidebar">
+
+        </aside>
+    </s_t3>
 </body>
 </html>
