--- a/skin.html
+++ b/skin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,51 @@
     <link rel="alternate" type="application/rss+xml" title="[##_title_##]" href="[##_rss_url_##]">
     <link rel="stylesheet" :href='"//fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"'>
     <link rel="stylesheet" :href='"//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"'>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body id="[##_body_id_##]">
     <s_t3>
-        <main id="main">
+        <main id="main" style="background: red;">
             <s_cover_group>
                 <s_cover_rep>
-                    
+                    <s_cover name="list">
+                        <s_cover_item>
+                            <s_cover_item_article_info>[##_cover_item_title_##]</s_cover_item_article_info>
+                            <s_cover_item_not_article_info>[##_cover_item_summary_##]</s_cover_item_not_article_info>
+                        </s_cover_item>
+                    </s_cover>
+                    <s_cover name="grid">
+                        <s_cover_item>
+                            <s_cover_item_article_info>[##_cover_item_title_##]</s_cover_item_article_info>
+                            <s_cover_item_not_article_info>[##_cover_item_summary_##]</s_cover_item_not_article_info>
+                        </s_cover_item>
+                    </s_cover>
+                    <s_cover name="zigzag">
+                        <s_cover_item>
+                            <s_cover_item_article_info>[##_cover_item_title_##]</s_cover_item_article_info>
+                            <s_cover_item_not_article_info>[##_cover_item_summary_##]</s_cover_item_not_article_info>
+                        </s_cover_item>
+                    </s_cover>
+                    <s_cover name="slideshow">
+                        <s_cover_item>
+                            <s_cover_item_article_info>[##_cover_item_title_##]</s_cover_item_article_info>
+                            <s_cover_item_not_article_info>[##_cover_item_summary_##]</s_cover_item_not_article_info>
+                        </s_cover_item>
+                    </s_cover>
+                    <s_cover name="rrrr">
+                        <s_cover_item>
+                            <s_cover_item_article_info>[##_cover_item_title_##]</s_cover_item_article_info>
+                            <s_cover_item_not_article_info>[##_cover_item_summary_##]</s_cover_item_not_article_info>
+                        </s_cover_item>
+                    </s_cover>
                 </s_cover_rep>
             </s_cover_group>
         </main>
         <aside id="sidebar">
-
+            sfaee
         </aside>
     </s_t3>
 </body>
+
 </html>
