--- a/skin.html
+++ b/skin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[##_page_title_##] — [##_title_##]</title>
+    <title>[##_title_##]</title>
     <link rel="alternate" type="application/rss+xml" title="[##_title_##]" href="[##_rss_url_##]">
     <script src="https://kit.fontawesome.com/ec4be74063.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
@@ -61,9 +61,11 @@
                                     <div class="text_center"><h1>[##_article_rep_title_##]</h1></div>
                                     <div class="text_center">[##_article_rep_date_##]</div>
                                     <s_ad_div>
-                                        <a href="[##_s_ad_m_link_##]">수정</a>
-                                        <a href="#" onclick="[##_s_ad_d_onclick_##]">삭제</a>
-                                        <a href="#" onclick="[##_s_ad_s2_onclick_##]">[##_s_ad_s1_label_##]</a>
+                                        <div style="text-align: center;">
+                                            <a href="[##_s_ad_m_link_##]">수정</a>|
+                                            <a href="#" onclick="[##_s_ad_d_onclick_##]">삭제</a>|
+                                            <a href="#" onclick="[##_s_ad_s2_onclick_##]">[##_s_ad_s1_label_##]</a>
+                                        </div>
                                     </s_ad_div>
                                 </div>
                             </header>
@@ -251,14 +253,14 @@
                 </div>
                 <header_bar id="header_bar">
                     <div id="page_title_container" style="margin: 0 auto;">
-                        <div id="page_title_category" style="text-align: center; while-space: nowrap;">
+                        <div id="page_title_category" style="font-size: x-small; text-align: center; while-space: nowrap;">
                         </div>
                         <div id="page_title" style="overflow: hidden;">
-                            <div id="page_title_text" style="white-space: nowrap; text-align: center;">
+                            <div id="page_title_text" style="font-weight: bold; white-space: nowrap; text-align: center;">
                                 [##_page_title_##]
                             </div>
                             
-                            <span id="page_title_text_copy" style="background: blue; white-space: nowrap; text-align: center; position:absolute; visibility:hidden">
+                            <span id="page_title_text_copy" style="font-weight: bold; background: blue; white-space: nowrap; text-align: center; position:absolute; visibility:hidden">
                                 [##_page_title_##]
                             </span>
                         </div>
@@ -369,7 +371,7 @@
             var set_page_title_scroll = () => {
                 if(page_title_text_copy.getBoundingClientRect().width > page_title.getBoundingClientRect().width) {
                     document.documentElement.style.setProperty('--text-size', '-' + page_title_text_copy.getBoundingClientRect().width + 'px');
-                    page_title_text.style.animation = 'marquee-animation ' + parseInt(page_title_text_copy.getBoundingClientRect().width / 100) + 's linear infinite';
+                    page_title_text.style.animation = 'marquee-animation ' + parseInt(page_title_text_copy.getBoundingClientRect().width / 40) + 's linear infinite';
                 } else {
                     page_title_text.style.animation = '';
                 }
