이제공부하고나중에꾸미자

--- a/skin.html
+++ b/skin.html
@@ -681,7 +681,7 @@
                 </div>
             </div>
             <div id="logo" onClick="location.href ='https://okane-on-cliff.tistory.com/'">
-                <div id="logo_main" style="display: flex; align-items:center;">
+                <div id="logo_main" style="display: flex; align-items:center; color: rgb(0,0,0,0.7);">
                     <div style="font-size: 30px; margin-right: 4px;">{</div>
                     <div>
                         <div style="font-size: calc(var(--hamburger-button-size) * 0.35); text-align:center; letter-spacing: 5px;">
